2022-02-07  Megan Gardner  <megan_gardner@apple.com>

        Setup alternate mouse gesture recognizer.
        https://bugs.webkit.org/show_bug.cgi?id=236127

        Reviewed by Tim Horton.
        
        * UIProcess/ios/WKContentViewInteraction.h:
        * UIProcess/ios/WKContentViewInteraction.mm:
        (shouldEnableAlternativeMouseGestureRecognizers):
        (-[WKContentView cleanUpInteraction]):
        (-[WKContentView _removeDefaultGestureRecognizers]):
        (-[WKContentView _addDefaultGestureRecognizers]):
        (-[WKContentView gestureRecognizer:shouldReceiveTouch:]):
        (-[WKContentView deferringGestureRecognizer:shouldDeferOtherGestureRecognizer:]):
        (-[WKContentView setUpMouseGestureRecognizer]):
        (-[WKContentView _configureMouseGestureRecognizer]):

2022-02-07  Per Arne  <pvollan@apple.com>

        Remove cfprefs shmem access
        https://bugs.webkit.org/show_bug.cgi?id=231068
        <rdar://73520381>

        Reviewed by Brent Fulgham.

        After enabling CFPrefs direct mode, we can remove cfprefs shmem access.

        * Resources/SandboxProfiles/ios/com.apple.WebKit.WebAuthn.sb:
        * Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in:
        * WebAuthnProcess/mac/com.apple.WebKit.WebAuthnProcess.sb.in:
        * WebProcess/com.apple.WebProcess.sb.in:

2022-02-07  Ada Chan  <ada.chan@apple.com>

        [WebXR] Handle updating session visibility state from PlatformXRCoordinator
        https://bugs.webkit.org/show_bug.cgi?id=236150

        Reviewed by Dean Jackson.

        Add plumbing to allow PlatformXRCoordinator to communicate session visibility
        state changes to XRDeviceProxy.

        * Scripts/webkit/messages.py:
        (types_that_cannot_be_forward_declared):
        (headers_for_type):
        * Shared/XR/XRDeviceProxy.cpp:
        (WebKit::XRDeviceProxy::updateSessionVisibilityState):